--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,13 +870,13 @@
     "]\n",
     "\n",
     "with open(\"data.json\", \"w\") as file:\n",
-    "    json.dump(data, file, indent=4)\n",
+    "    json.dump(data, file)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,14 +889,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
+      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': 'David', 'age': 28, 'city': 'San Francisco'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
      ]
     }
    ],
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +924,9 @@
      "text": [
       "File content:\n",
       "Hello Hi How ru\n",
-      "Good NightPython\n"
+      "Good NightPython\n",
+      "Python\n",
+      "Python\n"
      ]
     }
    ],
@@ -949,6 +951,13 @@
     "# Example usage\n",
     "read()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
