--- a/Python Basics/6.Functions.ipynb
+++ b/Python Basics/6.Functions.ipynb
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "c019bbc0",
    "metadata": {},
    "outputs": [],
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "738a751a",
    "metadata": {},
    "outputs": [],
@@ -1387,10 +1387,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1ba7511f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18-5-3-1-4\n",
+      "2-5-20-12-5\n",
+      "15-14-5-7-5-1\n",
+      "23-8-1-20\n",
+      "1-3-20-9-15-14\n",
+      "18-5-1-12-12-25\n",
+      "20-8-5\n",
+      "13-5-19-19-1-7-5\n",
+      "3-8-1-12-12-5-14-7-5\n",
+      "2-8-1-22-1-14\n",
+      "19-15-21-14-4-1-18-25-1\n",
+      "18-1-19-8-13-9\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert each text to its numerical representation\n",
     "encoded_messages = []\n",
@@ -1839,7 +1858,7 @@
     "\n",
     "    Hero = []\n",
     "    Heroine = []\n",
-    "    Villain = []\n",
+    "    Villain = []b\n",
     "\n",
     "    for movie, actors in movies.items():\n",
     "        if Name_of_actor in actors:\n",
