--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -518,14 +518,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index out of range. Please enter a valid index.\n"
+      "Invalid index input. Please enter a valid integer.\n"
      ]
     }
    ],
