--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -418,34 +418,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input. Please enter a valid number.\n"
+      "ValueError: invalid literal for int() with base 10: 'a'\n"
      ]
     }
    ],
    "source": [
     "try:\n",
     "    user_input = int(input(\"Enter a number: \"))\n",
-    "except ValueError:\n",
-    "    print(\"Invalid input. Please enter a valid number.\")\n"
+    "except ValueError as e:\n",
+    "    print(f\"ValueError: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File not found.\n"
+      "File not found. [Errno 2] No such file or directory: 'example.txt'\n"
      ]
     }
    ],
@@ -453,25 +453,33 @@
     "try:\n",
     "    with open(\"example.txt\", \"r\") as file:\n",
     "        content = file.read()\n",
-    "except FileNotFoundError:\n",
-    "    print(\"File not found.\")\n"
+    "except FileNotFoundError as e:\n",
+    "    print(f\"File not found. {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cannot divide by zero.\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    result = 10 / 0\n",
-    "except ZeroDivisionError:\n",
+    "except:\n",
     "    print(\"Cannot divide by zero.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,14 +501,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot divide by zero.\n"
+      "The result of a divided by b: 0.5\n"
      ]
     }
    ],
@@ -513,19 +521,21 @@
     "except ValueError:\n",
     "    print(\"Entered value is not a valid integer.\")\n",
     "except ZeroDivisionError:\n",
-    "    print(\"Cannot divide by zero.\")"
+    "    print(\"Cannot divide by zero.\")\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid index input. Please enter a valid integer.\n"
+      "An error occurred: invalid literal for int() with base 10: 'A'\n"
      ]
     }
    ],
@@ -537,8 +547,6 @@
     "    print(\"Value at index {}: {}\".format(index, result))\n",
     "except IndexError:\n",
     "    print(\"Index out of range. Please enter a valid index.\")\n",
-    "except ValueError:\n",
-    "    print(\"Invalid index input. Please enter a valid integer.\")\n",
     "except Exception as e:\n",
     "    print(f\"An error occurred: {e}\")\n"
    ]
@@ -552,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +591,8 @@
      "output_type": "stream",
      "text": [
       "-5.0\n",
-      "a/b result in 0\n"
+      "a/b result in 0\n",
+      "a or b is not a number\n"
      ]
     }
    ],
@@ -593,35 +602,14 @@
     "\t\tc = ((a+b) / (a-b))\n",
     "\texcept ZeroDivisionError:\n",
     "\t\tprint (\"a/b result in 0\")\n",
+    "\texcept TypeError:\n",
+    "\t\tprint (\"a or b is not a number\")\n",
     "\telse:\n",
     "\t\tprint (c)\n",
-    "AbyB(2.0, 3.0)\n",
-    "AbyB(3.0, 3.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The result is 5.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "def divide(a, b):\n",
-    "    try:\n",
-    "        result = a / b\n",
-    "    except ZeroDivisionError:\n",
-    "        print(\"Error: Division by zero is not allowed.\")\n",
-    "    else:\n",
-    "        print(f\"The result is {result}\")\n",
     "\n",
-    "divide(10, 2)"
+    "AbyB(2.0, 3.0)\n",
+    "AbyB(3.0, 3.0)\n",
+    "AbyB('A', 3.0)"
    ]
   },
   {
@@ -634,7 +622,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "The 'try except' is finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    x = 10\n",
+    "    print(x)\n",
+    "except:\n",
+    "    print(\"Something went wrong\")\n",
+    "finally:\n",
+    "    print(\"The 'try except' is finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +660,7 @@
    ],
    "source": [
     "try:\n",
-    "  print(x)\n",
+    "  print(i)\n",
     "except:\n",
     "  print(\"Something went wrong\")\n",
     "finally:\n",
@@ -657,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -707,14 +719,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cannot divide by zero.\n",
+      "Division result: 5.0\n",
       "Finally block: This code always runs.\n"
      ]
     }
@@ -743,34 +755,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result: 0.6666666666666666\n",
-      "Execution completed.\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    value = int(input(\"Enter a number: \"))\n",
-    "    result = 10 / value\n",
-    "except ValueError:\n",
-    "    print(\"Error: Invalid input. Please enter a valid integer.\")\n",
-    "except ZeroDivisionError:\n",
-    "    print(\"Error: Division by zero is not allowed.\")\n",
-    "else:\n",
-    "    print(f\"Result: {result}\")\n",
-    "finally:\n",
-    "    print(\"Execution completed.\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -781,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +775,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSorry, no numbers below zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[52], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m----> 4\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSorry, no numbers below zero\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mException\u001b[0m: Sorry, no numbers below zero"
      ]
     }
@@ -829,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +830,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# The raise statement allows the programmer to force a specific exception to occur\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m: \n\u001b[1;32m----> 3\u001b[0m \t\u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNameError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHi there\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mNameError\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m \t\u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn exception\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[53], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# The raise statement allows the programmer to force a specific exception to occur\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m: \n\u001b[1;32m----> 3\u001b[0m \t\u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNameError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHi there\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mNameError\u001b[39;00m:\n\u001b[0;32m      5\u001b[0m \t\u001b[38;5;28mprint\u001b[39m (\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn exception\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mNameError\u001b[0m: Hi there"
      ]
     }
@@ -862,19 +846,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_positive(number):\n",
     "    if number <= 0:\n",
+    "        c = 10/number\n",
     "        raise ValueError(\"The number must be positive!\")\n",
-    "    return f\"The number {number} is positive.\"\n",
-    "\n",
+    "    return f\"The number {c} is positive.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception caught: The number must be positive!\n",
+      "Execution completed.\n"
+     ]
+    }
+   ],
+   "source": [
     "try:\n",
-    "    print(check_positive(-5))\n",
+    "    a = int(input(\"Enter a positive number: \"))\n",
+    "    print(check_positive(a))\n",
     "except ValueError as e:\n",
-    "    print(f\"Exception caught: {e}\")\n"
+    "    print(f\"Exception caught: {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "else:\n",
+    "    print(\"No exception was raised.\")\n",
+    "finally:\n",
+    "    print(\"Execution completed.\")"
    ]
   }
  ],
