--- a/Python Basics/7.Exception Handling.ipynb
+++ b/Python Basics/7.Exception Handling.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exception Handling:"
+    "## **Exception Handling:**"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### User-defined Exceptions:\n",
+    "### **User-defined Exceptions:**\n",
     "\n",
     "The programmer can also create his  own exceptions which are called user-defined Exception or \"Custom Exception\".\n",
     "\n",
@@ -616,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finally Keyword in Python\n",
+    "### **Finally Keyword in Python**\n",
     "which is always executed after the try and except blocks. The final block always executes after the normal termination of the try block or after the try block terminates due to some exception."
    ]
   },
@@ -758,9 +758,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Raising Exception\n",
+    "### **Raising Exception**\n",
     "- Raising exceptions in Python is done using the raise statement. This is useful when you want to trigger an exception manually based on certain conditions.\n",
     "<pre><code>raise ExceptionType(\"Error message\")</code></pre>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Custom Exception**\n",
+    "\n",
+    "Custom exceptions allow you to define your own error types by creating a new exception class that inherits from Python's built-in Exception class. This is useful for handling specific errors that are not covered by built-in exceptions."
    ]
   },
   {
