--- a/Python Oops/Python Oops.ipynb
+++ b/Python Oops/Python Oops.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
     "        self.b = b\n",
     "\n",
     "    def ans(self):\n",
-    "        return self.a+self.b"
+    "        return self.a + self.b"
    ]
   },
   {
@@ -244,25 +244,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "40\n"
+      "20\n"
      ]
     }
    ],
    "source": [
     "class Foo:\n",
-    "    def __init__(self,x=30):\n",
+    "    def __init__(self,x):\n",
     "        self.x=x\n",
     "    def foo(self, y):\n",
     "        print(self.x+y)\n",
     "\n",
-    "f = Foo()\n",
+    "f = Foo(10)\n",
     "f.foo(10)"
    ]
   },
@@ -326,17 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Addition: 7\n",
-      "Subtraction: 1\n",
-      "Multiplication: 12\n",
-      "Division: 1.3333333333333333\n"
+      "Addition: 8\n",
+      "Subtraction: 2\n",
+      "Multiplication: 15\n",
+      "Division: 1.6666666666666667\n"
      ]
     }
    ],
@@ -362,7 +362,7 @@
     "            return \"Cannot divide by zero\"\n",
     "\n",
     "# Creating an object (instance) of the Calculator class\n",
-    "calc = Calculator(4, 3)\n",
+    "calc = Calculator(5, 3)\n",
     "\n",
     "# Using methods of the class\n",
     "result_add = calc.add()\n",
@@ -394,14 +394,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1500\n"
+      "1300\n"
      ]
     }
    ],
@@ -413,23 +413,31 @@
     "    def deposit(self, amount):\n",
     "        self.__balance += amount\n",
     "\n",
+    "    def withdraw(self, amount):\n",
+    "        if self.__balance >= amount:\n",
+    "            self.__balance -= amount\n",
+    "        else:\n",
+    "            print(\"Insufficient funds\")\n",
+    "\n",
     "    def get_balance(self):\n",
     "        return self.__balance\n",
     "\n",
     "account = BankAccount(1000)\n",
     "account.deposit(500)\n",
+    "account.withdraw(200)\n",
     "print(account.get_balance())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Color: red, Model: toyota, Year: 2010\n",
       "100\n"
      ]
     }
@@ -447,10 +455,14 @@
     "            self._mileage += miles \n",
     "    def get_mileage(self):\n",
     "        return self._mileage\n",
+    "        \n",
+    "    def get_car_detaile(self):\n",
+    "        return f\"Color: {self.color}, Model: {self.model}, Year: {self.year}\"\n",
     "\n",
     "my_car = Car(\"red\", \"toyota\", 2010)\n",
     "\n",
     "my_car.drive(100)\n",
+    "print(my_car.get_car_detaile())\n",
     "print(my_car.get_mileage())"
    ]
   },
@@ -477,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -548,6 +560,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 is divisible by 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class number:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    def is_divisible_by(self):\n",
+    "        return self.value % 2 == 0\n",
+    "\n",
+    "class Specialnumber(number):\n",
+    "    def check_divisible(self):\n",
+    "        if self.is_divisible_by():\n",
+    "            print(f\"{self.value} is divisible by 2\")\n",
+    "        else:\n",
+    "            print(f\"{self.value} is not divisible by 2\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    num = Specialnumber(10)\n",
+    "    num.check_divisible()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -563,7 +608,6 @@
    ],
    "source": [
     "# Multiple Inheritance:\n",
-    "\n",
     "class Flyer:\n",
     "    def fly(self):\n",
     "        return \"Flying\"\n",
@@ -580,6 +624,47 @@
     "print(donald.fly())    \n",
     "print(donald.swim())   \n",
     "print(donald.quack())  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 10 is divisible by 2.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Base class\n",
+    "class Number:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "    \n",
+    "    def is_divisible_by_2(self):\n",
+    "        \"\"\"Check if the number is divisible by 2.\"\"\"\n",
+    "        return self.value % 2 == 0\n",
+    "\n",
+    "# Derived class\n",
+    "class SpecialNumber(Number):\n",
+    "    def __init__(self, value):\n",
+    "        super().__init__(value)  # Initialize the base class with the value\n",
+    "\n",
+    "    def check_divisibility(self):\n",
+    "        \"\"\"Check if the number is divisible by 2 and print the result.\"\"\"\n",
+    "        if self.is_divisible_by_2():\n",
+    "            print(f\"The number {self.value} is divisible by 2.\")\n",
+    "        else:\n",
+    "            print(f\"The number {self.value} is not divisible by 2.\")\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    num = SpecialNumber(10)  # You can change this value to test other numbers\n",
+    "    num.check_divisibility()"
    ]
   },
   {
@@ -630,6 +715,73 @@
     "\n",
     "- Flexibility: Functions can operate on any object that implements the required methods, regardless of their class hierarchy.\n",
     "- No Need for Shared Superclass: Unlike traditional OOP languages, Python doesn't require classes to share a common superclass to use polymorphism."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Woof!\n",
+      "Meow!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def speak(self):\n",
+    "        raise NotImplementedError(\"Subclasses must implement this method\")\n",
+    "\n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Woof!\"\n",
+    "\n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return \"Meow!\"\n",
+    "\n",
+    "def make_animal_speak(animal):\n",
+    "    print(animal.speak())\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    dog = Dog()\n",
+    "    cat = Cat()\n",
+    "    \n",
+    "    make_animal_speak(dog)\n",
+    "    make_animal_speak(cat) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MathOperations:\n",
+    "    def add(self, a, b, c=None):\n",
+    "        if c is not None:\n",
+    "            return a + b + c\n",
+    "        return a + b\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    math = MathOperations()\n",
+    "    print(math.add(1, 2))    \n",
+    "    print(math.add(1, 2, 3))     \n"
    ]
   },
   {
